# aka-rk3588

./: CMakeLists.txt  build_rk3588.sh  logger.hpp  tennis.cpp  test_cmds.cpp  test_cmds.hpp
capture/: uvc_capture.cpp  uvc_capture.hpp
detect/: detect.cpp  detect.hpp
motor/: motor.cpp  motor.hpp  motor_driver.hpp  pwm_motor_driver.cpp  pwm_motor_driver.hpp  uart_motor_driver.cpp  uart_motor_driver.hpp
